# Bananapi

./: .gitattributes  .gitignore  API_REFERENCE.md  ARCHITECTURE_V3.md  CHANGELOG.md  CLASS_ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  DECEMBER_2025_UPDATE_REPORT.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  Doxyfile  FILE_STRUCTURE.md  MODES_GUIDE.md  QUICK_START.md  REACT_APP_API.md  README.md  SSH_KEY_SETUP.md  TRANSFORMATION_SUMMARY.md  check-system-status.sh  start-complete-system.sh  start-dev.sh  start-prod.sh  stop-all.sh  test-ssh-connection.sh  test-wallbox-interactive.sh  test-wallbox-quick.sh
LibPubWallbox/: ChargingProcessTransmitterHTTP_Interface.cpp  IsoStackCtrlProtocol.h  Makefile  Messages.cpp  Messages.h  README_IsoStackCtrl.md  test_iso
LibPubWallbox/GruppeC/: ChargingProcessTransmitterHTTP.cpp  ChargingProcessTransmitterHTTP.h
LibPubWallbox/libmicrohttpd/mingw64/lib/pkgconfig/: libmicrohttpd.pc
WallboxCtrl/: CMakeLists.txt  INTERACTIVE_GUIDE.md  README.md  README_V2.md  README_V4.md  SIMULATOR_STATUS_FIX.md  STATUS_EXCHANGE_FIX.md  TEST_RESULTS.md  TEST_SYNC_GUIDE.md  UDP_CONFIG_GUIDE.md  V4_COMMANDS.md  build.sh  test.sh  test_quick_status.sh  test_state_sync.sh  test_status_exchange.sh  test_system.sh
WallboxCtrl/include/: ApiController.h  Application.h  BananaPiGpioController.h  Configuration.h  HardwareCpSignalReader.h  UdpCommunicator.h  WallboxController.h
WallboxCtrl/scripts/: README.md  deploy.sh  install.sh
WallboxCtrl/src/: CpSignalReaderFactory.cpp  IsoStackCtrlProtocol_impl.cpp  Makefile  SimulatorCpSignalReader.cpp  WallboxController.cpp  main.cpp  main_v2.cpp  main_v2_with_api.cpp  main_v3.cpp  main_v4.cpp  simulator  simulator.cpp  sources  wallbox_ctrl
WallboxCtrl/src/tt/: Application.h  ChargingStateMachine.h  Configuration.h  INetworkCommunicator.h  Makefile  WallboxController.cpp  main.cpp  main_v3.cpp  main_v4.cpp  simulator  simulator.cpp  sources  wallbox_ctrl
config/: development.json  development_pi.json  production.json  test.json
docs/: BANANAPI_M5_GPIO_GUIDE.md  BANANAPI_M5_GPIO_TEST_REPORT.md  BANANAPI_M5_SETUP.md  BUILD_AND_RUN_SESSION.md  CHANGELOG.md  CONCURRENT_MODE_SOLUTION.md  CP_SIGNAL_IMPLEMENTATION.md  DOCS_INDEX.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_UPDATE.md  DUAL_MODE_GUIDE.md  DUAL_MODE_QUICK_REF.md  FILE_STRUCTURE.md  GPIO_HARDWARE_TEST_REPORT.md  IMPROVEMENTS_SUMMARY.md  INTERACTIVE_MODE.md  INTERACTIVE_MODE_IMPLEMENTATION.md  MAINPAGE.md  MODE_DIFFERENCES_FAQ.md  MODE_GUIDE.md  PROJECT_RESTRUCTURE_PLAN.md  PROJECT_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  SYSTEM_OVERVIEW.md  UDP_SYNC_GUIDE.md
docs/api/: API_REFERENCE.md  QUICK_REFERENCE.md  REACT_APP_API.md  README.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_V3.md  ARCHITECTURE_VISUAL.md  CLASS_ARCHITECTURE.md  CLEAN_ARCHITECTURE.md  README.md  SOLID_DESIGN_PATTERNS.md
docs/backups/: ARCHITECTURE_V3.md  WallboxCtrl_README.md
docs/diagrams/: CLASS_DIAGRAM.md  COMPONENT_DIAGRAM.md  OBJECT_DIAGRAM.md
docs/doxygen/: README.md
docs/guides/: COMPLETE_SYSTEM_GUIDE.md  DUAL_MODE_GUIDE.md  INSTALLATION.md  INSTALLATION_GUIDE.md  MIGRATION.md  MODES_GUIDE.md  QUICK_START.md  README.md  SSH_SETUP.md  UDP_SYNC_GUIDE.md
docs/history/: CHANGELOG.md  IMPROVEMENTS_SUMMARY.md  REMOVAL_SUMMARY.md  SIMULATOR_INDEPENDENCE.md  TRANSFORMATION_SUMMARY.md
docs/summaries/: CHECKLIST.md  COMPLETE.md
env/: Dockerfile  README.md  docker-compose.yml
include/wallbox/: Application.h  ChargingStateMachine.h  Configuration.h  CpSignalReaderFactory.h  GpioFactory.h  ICpSignalReader.h  IGpioController.h  SimpleWallboxController.h  SimulatorCpSignalReader.h  StubGpioController.h  WallboxController.h
scripts/: connect-wallbox-terminal.sh  open_ports.py  start-api-only.sh  start-dev.sh  start-prod.sh  test-ssh-connection.sh
scripts/deploy/: deploy.sh  install.sh
scripts/test/: test_interactive.sh  test_quick_status.sh  test_state_sync.sh  test_status_exchange.sh  test_wallbox.sh
scripts/usb-hid/: README.md  arduino_hid.ino  code.py  digispark_hid.ino
src/api/: HttpApiServer.cpp
src/core/: ChargingStateMachine.cpp  SimpleWallboxController.cpp  WallboxController.cpp  main.cpp  main_v2_with_api.cpp  main_v3.cpp  main_v4.cpp
src/gpio/: BananaPiGpioController.cpp
src/network/: UdpCommunicator.cpp
src/signal/: CpSignalReaderFactory.cpp  HardwareCpSignalReader.cpp  SimulatorCpSignalReader.cpp
src/simulator/: simulator.cpp
tests/integration/: test_ChargingStateMachine.cpp  test_WallboxController.cpp
wallbox-deployment/: DEPLOYMENT_INFO.txt  README.md  TRANSFER.sh
wallbox-deployment/docs/: CONFIG_GUIDE.md  INTERACTIVE_MODE.md  QUICK_START.md
wallbox-deployment/scripts/: install-service.sh  start-simulator.sh  start-wallbox.sh  stop-wallbox.sh
wallbox-portable-deploy/: BUILD_METHODS.md  CMakeLists.txt  CREATION_SUMMARY.md  DOCS_INDEX.md  Makefile  PACKAGE_CONTENTS.md  PORTABLE_ARCHITECTURE.md  PORTABLE_TEST_RESULTS.md  QUICK_START.md  README.md  test_portable.sh
wallbox-portable-deploy/config/: config.json
wallbox-portable-deploy/docs/: CP_SIGNAL_IMPLEMENTATION.md
wallbox-portable-deploy/include/: HttpApiServer.h  WallboxController.h
wallbox-portable-deploy/scripts/: deploy.sh  install.sh  test-local.sh  test-remote.sh
wallbox-portable-deploy/src/: ChargingStateMachine.cpp  HttpApiServer.cpp  StubGpioController.cpp  WallboxController.cpp  main_v4.cpp  simulator.cpp
wallbox-react-app/: README.md
wallbox-react-app/public/: index.html
wallbox-react-app/src/: App.css  App.js
wallbox-react-app/src/api/: wallboxApi.js
wallbox-react-app/src/utils/: logger.js
web/react-app/: .env  package-lock.json  package.json
web/react-app/src/: App.css  App.js
web/react-app/src/api/: wallboxApi.js
